...
                            .onAppear {
                                player.play()
                            }
                            .onDisappear {
                                player.pause()
                            }
                            .accessibilityIdentifier("videoPlayer")

                        if let watchURL = asset?.watchURL {
                            ShareLink(item: watchURL) {
                                HStack {
                                    Image(systemName: "square.and.arrow.up")
                                        .font(.system(size: 20))
...
                                .padding()
                                .background(Color.blue)
                                .foregroundColor(.white)
                                .cornerRadius(8)
                            }
                            .padding(.top, 10)
                            .accessibilityIdentifier("shareButton")
                        } else {
                            Text("Share link could not be loaded")
                                .foregroundColor(.red)
                                .padding(.top, 10)
                                .accessibilityIdentifier("errorMessage")
                        }
...
